[package]
name = "refield"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/xeonn/refield"
authors = ["Onn Khairuddin"]
description = """
Renames a field in documents within a CouchDB database
"""

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
